--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "crappybrid"
 version = "0.1.0"
-authors = ["martin croft"]
+authors = ["carnillo"]
 edition = "2018"
 
 [dependencies]
